# linux_cmds

./: .gitignore  README.md
ldd/: CMakeLists.txt
ldd/includes/: ldd.h
ldd/src/: ldd.c
ldd/test/: test_ldd.cpp
ls/: CMakeLists.txt
ls/cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ls[1]_include.cmake  test_ls[1]_tests.cmake
ls/includes/: ls.h
ls/src/: ls.c
ls/test/: test_ls.cpp
ping/: CMakeLists.txt
ping/includes/: ping.h
ping/src/: ping.c
ping/test/: test_ping.cpp
pwd/: CMakeLists.txt
pwd/includes/: pwd.h
pwd/src/: pwd.c
pwd/test/: test_pwd.cpp
scripts/: CMakeLists.txt  init.sh
wget/: CMakeLists.txt
wget/includes/: wget.h
wget/src/: wget.c
wget/test/: test_wget.cpp
